--- a/OnlineRegistration/app/src/main/res/layout/activity_main.xml
+++ b/OnlineRegistration/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.indran.onlineregistration.MainActivity">
+    tools:context="com.indran.onlineregistration.MainActivity"
+    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
 
 
     <ImageView
@@ -24,4 +25,5 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="108dp" />
+
 </RelativeLayout>
